@@ -1,3 +1,9 @@
+2008-04-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* conf/FindAce.cmake: prioritize paths relative to ACE_ROOT 
+	environmental variable, if present -- issue reported by
+	Andrew Dankers.
+
 2008-04-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_dev/CMakeLists.txt: fix broken regression tests for
